cmd: add bazel build virtctl for Arm64
Build virtctl-arm64 and virtctl-darwin-arm64 as well.
We do not have virtctl-windows-arm64 because go_sdk for windows_arm64
, which used by bazel build, not works well.

Signed-off-by: howard zhang <howard.zhang@arm.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -363,6 +363,26 @@ genrule(
 )
 
 genrule(
+    name = "build-virtctl-arm64",
+    srcs = [
+        "//cmd/virtctl:virtctl-arm64",
+    ],
+    outs = ["virtctl-copier-arm64"],
+    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
+    executable = 1,
+)
+
+genrule(
+    name = "build-virtctl-darwin-arm64",
+    srcs = [
+        "//cmd/virtctl:virtctl-darwin-arm64",
+    ],
+    outs = ["virtctl-copier-darwin-arm64"],
+    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
+    executable = 1,
+)
+
+genrule(
     name = "build-ginkgo",
     srcs = [
         "//vendor/github.com/onsi/ginkgo/v2/ginkgo",
